[EMM-13] Update-Manager-Funtion

--- a/frontend/src/app/features/auth/pages/login/login.component.html
+++ b/frontend/src/app/features/auth/pages/login/login.component.html
@@ -75,9 +75,9 @@
     <div class="login-footer">
       <p class="demo-accounts">
         <strong>Tài khoản demo:</strong><br>
-        Admin: admin@example.com / admin123<br>
-        Manager: manager@example.com / admin123<br>
-        Staff: staff1@example.com / admin123
+        Super staff: sales.manager@company.com / 123456<br>
+        Manager: manager@company.com / 123456<br>
+        Staff: sales.manager@company.com / 123456
       </p>
     </div>
   </div>
