--- a/frontend/src/app/features/manager/components/employee-form-modal/employee-form-modal.component.html
+++ b/frontend/src/app/features/manager/components/employee-form-modal/employee-form-modal.component.html
@@ -86,7 +86,7 @@
                 class="w-full px-4 py-2.5 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition-all bg-white">
                 <option value="">Select role</option>
                 <option *ngFor="let role of roles" [value]="role.id">
-                  {{ role.displayName }} (Level {{ role.level }})
+                  {{ role.displayName }}
                 </option>
               </select>
               <p *ngIf="employeeForm.get('roleId')?.invalid && employeeForm.get('roleId')?.touched" 
